--- a/forest_fires.ipynb
+++ b/forest_fires.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -13,16 +13,18 @@
     "import calendar as cal\n",
     "import tensorflow as tf\n",
     "import matplotlib.pyplot as plt\n",
+    "from sklearn import neighbors, covariance\n",
     "\n",
     "from matplotlib import style\n",
     "from collections import OrderedDict\n",
+    "from sklearn import svm\n",
     "\n",
     "style.use('ggplot')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -33,69 +35,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "month_area_dict = {1:np.array([]),2:np.array([]),3:np.array([]),4:np.array([]),\n",
-    "                   5:np.array([]),6:np.array([]),7:np.array([]),8:np.array([]),\n",
-    "                   9:np.array([]),10:np.array([]),11:np.array([]),12:np.array([])}\n",
+    "month_area_dict = {}\n",
     "\n",
     "month_to_number = {key.lower(): value for value, key in enumerate(cal.month_abbr)}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# for row in df.itertuples():\n",
+    "#     index = month_to_number[row[3]]\n",
+    "#     month_area_dict[index] = np.append(month_area_dict[index], row[-1])\n",
+    "# for month in month_area_dict:\n",
+    "#     month_area_dict[month] = np.mean(month_area_dict[month])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# x = list(month_area_dict.keys())\n",
+    "# y = list(month_area_dict.values())\n",
+    "# plt.xticks(x, [cal.month_abbr[i] for i in range(1, 13)])\n",
+    "# plt.bar(x, y)\n",
+    "# plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{1: 0.0, 2: 6.2750000000000004, 3: 4.3566666666666682, 4: 8.8911111111111119, 5: 19.239999999999998, 6: 5.8411764705882341, 7: 14.369687499999998, 8: 12.489076086956521, 9: 17.942616279069767, 10: 6.6379999999999999, 11: 0.0, 12: 13.330000000000002}\n"
+      "<pandas.core.groupby.DataFrameGroupBy object at 0x7f08b98181d0>\n<pandas.core.groupby.DataFrameGroupBy object at 0x7f08b98181d0>\n<pandas.core.groupby.DataFrameGroupBy object at 0x7f08b98181d0>\n<pandas.core.groupby.DataFrameGroupBy object at 0x7f08b98181d0>\n<pandas.core.groupby.DataFrameGroupBy object at 0x7f08b98181d0>\n<pandas.core.groupby.DataFrameGroupBy object at 0x7f08b98181d0>\n<pandas.core.groupby.DataFrameGroupBy object at 0x7f08b98181d0>\n<pandas.core.groupby.DataFrameGroupBy object at 0x7f08b98181d0>\n<pandas.core.groupby.DataFrameGroupBy object at 0x7f08b98181d0>\n<pandas.core.groupby.DataFrameGroupBy object at 0x7f08b98181d0>\n<pandas.core.groupby.DataFrameGroupBy object at 0x7f08b98181d0>\n<pandas.core.groupby.DataFrameGroupBy object at 0x7f08b98181d0>\n"
      ]
     }
    ],
    "source": [
-    "for row in df.itertuples():\n",
-    "    index = month_to_number[row[3]]\n",
-    "    month_area_dict[index] = np.append(month_area_dict[index], row[-1])\n",
-    "for month in month_area_dict:\n",
-    "    month_area_dict[month] = np.mean(month_area_dict[month])"
+    "grouped = df.groupby('month')\n",
+    "\n",
+    "for group in grouped:\n",
+    "    \n",
+    "    month_area_dict[month_to_number[group[0]]] =\\\n",
+    "        grouped.get_group(group[0]).mean(axis=0)['area']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "x = list(month_area_dict.keys())\n",
     "y = list(month_area_dict.values())\n",
-    "plt.xticks(x, [cal.month_abbr[i] for i in range(12)])\n",
+    "plt.xticks(x, [cal.month_abbr[i] for i in range(1, 13)])\n",
     "plt.bar(x, y)\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "14.3696875\n"
-     ]
+     "ename": "ValueError",
+     "evalue": "could not convert string to float: 'tue'",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-8-7cac3798b5df>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdecomposition\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mPCA\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mpca\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mPCA\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn_components\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m7\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mdf_reduced\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpca\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit_transform\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[0mdf_reduced\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m/home/snowman/anaconda3/envs/tensorflow/lib/python3.5/site-packages/sklearn/decomposition/pca.py\u001b[0m in \u001b[0;36mfit_transform\u001b[1;34m(self, X, y)\u001b[0m\n\u001b[0;32m    239\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    240\u001b[0m         \"\"\"\n\u001b[1;32m--> 241\u001b[1;33m         \u001b[0mU\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mS\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mV\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_fit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    242\u001b[0m         \u001b[0mU\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mU\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m:\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mn_components_\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    243\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m/home/snowman/anaconda3/envs/tensorflow/lib/python3.5/site-packages/sklearn/decomposition/pca.py\u001b[0m in \u001b[0;36m_fit\u001b[1;34m(self, X)\u001b[0m\n\u001b[0;32m    266\u001b[0m             \u001b[0mrequested\u001b[0m\u001b[1;33m.\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    267\u001b[0m         \"\"\"\n\u001b[1;32m--> 268\u001b[1;33m         \u001b[0mX\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcheck_array\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    269\u001b[0m         \u001b[0mn_samples\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mn_features\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mX\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    270\u001b[0m         \u001b[0mX\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mas_float_array\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m/home/snowman/anaconda3/envs/tensorflow/lib/python3.5/site-packages/sklearn/utils/validation.py\u001b[0m in \u001b[0;36mcheck_array\u001b[1;34m(array, accept_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, ensure_min_samples, ensure_min_features, warn_on_dtype, estimator)\u001b[0m\n\u001b[0;32m    391\u001b[0m         \u001b[1;31m# make sure we acually converted to numeric:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    392\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mdtype_numeric\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0marray\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdtype\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkind\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m\"O\"\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 393\u001b[1;33m             \u001b[0marray\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0marray\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfloat64\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    394\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mallow_nd\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0marray\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mndim\u001b[0m \u001b[1;33m>=\u001b[0m \u001b[1;36m3\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    395\u001b[0m             raise ValueError(\"Found array with dim %d. %s expected <= 2.\"\n",
+      "\u001b[1;31mValueError\u001b[0m: could not convert string to float: 'tue'"
+     ],
+     "output_type": "error"
     }
    ],
    "source": [
-    "grouped = df.groupby('month')\n",
-    "print(np.mean(grouped.get_group('jul')['area']))"
+    "from sklearn.decomposition import PCA\n",
+    "pca = PCA(n_components=7)\n",
+    "df_reduced = pca.fit_transform(df)\n",
+    "df_reduced"
    ]
   },
   {
