.gitignore added, x y to log lat, csv to geojson, ready for google maps api

--- a/cov_matrix.ipynb
+++ b/cov_matrix.ipynb
@@ -16,16 +16,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "None\n"
-     ]
-    }
-   ],
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
     "df = pd.read_csv('forest_fires.csv')\n",
     "# dictionary used to translate month names to integer, 1 for january\n",
@@ -41,51 +36,76 @@
     "for group in grouped:\n",
     "    df.replace(group[0], day_to_num_dict[group[0]], inplace=True)\n",
     "    \n",
-    "df = df.corr()\n",
-    "print(df.index.name)"
+    "df.drop(['area', 'Y', 'day'], 1, inplace=True)\n",
+    "cols = df.columns.tolist()\n",
+    "cols = ['DC', 'month', 'DMC', 'temp', 'RH', 'FFMC', 'ISI', 'wind', 'rain', 'X']\n",
+    "df = df[cols]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    ""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
-    "df.index.name = 'attr'"
+    "df = df.corr()\n",
+    "\n",
+    "df = df.reset_index()\n",
+    "df.drop(['index'], 1, inplace=True)\n",
+    "try:\n",
+    "    to_save = 'corr_matrix.csv'\n",
+    "    df.to_csv(to_save)\n",
+    "except Exception as err:\n",
+    "    print(format(err))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# try:\n",
-    "#     to_save = '~/Desktop/corr_matrix.csv'\n",
-    "#     df.to_csv(to_save)\n",
-    "# except Exception as err:\n",
-    "#     print(format(err))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# df['col'] = pd.Series(list(df), index=df.index)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "attr          X         Y     month       day      FFMC       DMC        DC  \\\nattr                                                                          \nX      1.000000  0.539548 -0.065003 -0.024922 -0.021039 -0.048384 -0.085916   \nY      0.539548  1.000000 -0.066292 -0.005453 -0.046308  0.007782 -0.101178   \nmonth -0.065003 -0.066292  1.000000 -0.050837  0.291477  0.466645  0.868698   \nday   -0.024922 -0.005453 -0.050837  1.000000 -0.041068  0.062870  0.000105   \nFFMC  -0.021039 -0.046308  0.291477 -0.041068  1.000000  0.382619  0.330512   \nDMC   -0.048384  0.007782  0.466645  0.062870  0.382619  1.000000  0.682192   \nDC    -0.085916 -0.101178  0.868698  0.000105  0.330512  0.682192  1.000000   \nISI    0.006210 -0.024488  0.186597  0.032909  0.531805  0.305128  0.229154   \ntemp  -0.051258 -0.024103  0.368842  0.052190  0.431532  0.469594  0.496208   \nRH     0.085223  0.062221 -0.095280  0.092151 -0.300995  0.073795 -0.039192   \nwind   0.018798 -0.020341 -0.086368  0.032478 -0.028485 -0.105342 -0.203466   \nrain   0.065387  0.033234  0.013438 -0.048340  0.056702  0.074790  0.035861   \narea   0.063385  0.044873  0.056496  0.023226  0.040122  0.072994  0.049383   \n\nattr        ISI      temp        RH      wind      rain      area  \nattr                                                               \nX      0.006210 -0.051258  0.085223  0.018798  0.065387  0.063385  \nY     -0.024488 -0.024103  0.062221 -0.020341  0.033234  0.044873  \nmonth  0.186597  0.368842 -0.095280 -0.086368  0.013438  0.056496  \nday    0.032909  0.052190  0.092151  0.032478 -0.048340  0.023226  \nFFMC   0.531805  0.431532 -0.300995 -0.028485  0.056702  0.040122  \nDMC    0.305128  0.469594  0.073795 -0.105342  0.074790  0.072994  \nDC     0.229154  0.496208 -0.039192 -0.203466  0.035861  0.049383  \nISI    1.000000  0.394287 -0.132517  0.106826  0.067668  0.008258  \ntemp   0.394287  1.000000 -0.527390 -0.227116  0.069491  0.097844  \nRH    -0.132517 -0.527390  1.000000  0.069410  0.099751 -0.075519  \nwind   0.106826 -0.227116  0.069410  1.000000  0.061119  0.012317  \nrain   0.067668  0.069491  0.099751  0.061119  1.000000 -0.007366  \narea   0.008258  0.097844 -0.075519  0.012317 -0.007366  1.000000  \n"
+      "         DC     month       DMC      temp        RH      FFMC       ISI  \\\n",
+      "0  1.000000  0.868698  0.682192  0.496208 -0.039192  0.330512  0.229154   \n",
+      "1  0.868698  1.000000  0.466645  0.368842 -0.095280  0.291477  0.186597   \n",
+      "2  0.682192  0.466645  1.000000  0.469594  0.073795  0.382619  0.305128   \n",
+      "3  0.496208  0.368842  0.469594  1.000000 -0.527390  0.431532  0.394287   \n",
+      "4 -0.039192 -0.095280  0.073795 -0.527390  1.000000 -0.300995 -0.132517   \n",
+      "5  0.330512  0.291477  0.382619  0.431532 -0.300995  1.000000  0.531805   \n",
+      "6  0.229154  0.186597  0.305128  0.394287 -0.132517  0.531805  1.000000   \n",
+      "7 -0.203466 -0.086368 -0.105342 -0.227116  0.069410 -0.028485  0.106826   \n",
+      "8  0.035861  0.013438  0.074790  0.069491  0.099751  0.056702  0.067668   \n",
+      "9 -0.085916 -0.065003 -0.048384 -0.051258  0.085223 -0.021039  0.006210   \n",
+      "\n",
+      "       wind      rain         X  \n",
+      "0 -0.203466  0.035861 -0.085916  \n",
+      "1 -0.086368  0.013438 -0.065003  \n",
+      "2 -0.105342  0.074790 -0.048384  \n",
+      "3 -0.227116  0.069491 -0.051258  \n",
+      "4  0.069410  0.099751  0.085223  \n",
+      "5 -0.028485  0.056702 -0.021039  \n",
+      "6  0.106826  0.067668  0.006210  \n",
+      "7  1.000000  0.061119  0.018798  \n",
+      "8  0.061119  1.000000  0.065387  \n",
+      "9  0.018798  0.065387  1.000000  \n"
      ]
     }
    ],
@@ -95,8 +115,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "try:\n",
@@ -108,14 +130,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        value    col    row\n0    1.000000      X      X\n1    0.539548      Y      X\n2   -0.065003  month      X\n3   -0.024922    day      X\n4   -0.021039   FFMC      X\n5   -0.048384    DMC      X\n6   -0.085916     DC      X\n7    0.006210    ISI      X\n8   -0.051258   temp      X\n9    0.085223     RH      X\n10   0.018798   wind      X\n11   0.065387   rain      X\n12   0.063385   area      X\n13   0.539548      X      Y\n14   1.000000      Y      Y\n15  -0.066292  month      Y\n16  -0.005453    day      Y\n17  -0.046308   FFMC      Y\n18   0.007782    DMC      Y\n19  -0.101178     DC      Y\n20  -0.024488    ISI      Y\n21  -0.024103   temp      Y\n22   0.062221     RH      Y\n23  -0.020341   wind      Y\n24   0.033234   rain      Y\n25   0.044873   area      Y\n26  -0.065003      X  month\n27  -0.066292      Y  month\n28   1.000000  month  month\n29  -0.050837    day  month\n..        ...    ...    ...\n139  0.069410     RH   wind\n140  1.000000   wind   wind\n141  0.061119   rain   wind\n142  0.012317   area   wind\n143  0.065387      X   rain\n144  0.033234      Y   rain\n145  0.013438  month   rain\n146 -0.048340    day   rain\n147  0.056702   FFMC   rain\n148  0.074790    DMC   rain\n149  0.035861     DC   rain\n150  0.067668    ISI   rain\n151  0.069491   temp   rain\n152  0.099751     RH   rain\n153  0.061119   wind   rain\n154  1.000000   rain   rain\n155 -0.007366   area   rain\n156  0.063385      X   area\n157  0.044873      Y   area\n158  0.056496  month   area\n159  0.023226    day   area\n160  0.040122   FFMC   area\n161  0.072994    DMC   area\n162  0.049383     DC   area\n163  0.008258    ISI   area\n164  0.097844   temp   area\n165 -0.075519     RH   area\n166  0.012317   wind   area\n167 -0.007366   rain   area\n168  1.000000   area   area\n\n[169 rows x 3 columns]\n"
+      "       value    col    row\n",
+      "0   1.000000     DC     DC\n",
+      "1   0.868698  month     DC\n",
+      "2   0.682192    DMC     DC\n",
+      "3   0.496208   temp     DC\n",
+      "4  -0.039192     RH     DC\n",
+      "5   0.330512   FFMC     DC\n",
+      "6   0.229154    ISI     DC\n",
+      "7  -0.203466   wind     DC\n",
+      "8   0.035861   rain     DC\n",
+      "9  -0.085916      X     DC\n",
+      "10  0.868698     DC  month\n",
+      "11  1.000000  month  month\n",
+      "12  0.466645    DMC  month\n",
+      "13  0.368842   temp  month\n",
+      "14 -0.095280     RH  month\n",
+      "15  0.291477   FFMC  month\n",
+      "16  0.186597    ISI  month\n",
+      "17 -0.086368   wind  month\n",
+      "18  0.013438   rain  month\n",
+      "19 -0.065003      X  month\n",
+      "20  0.682192     DC    DMC\n",
+      "21  0.466645  month    DMC\n",
+      "22  1.000000    DMC    DMC\n",
+      "23  0.469594   temp    DMC\n",
+      "24  0.073795     RH    DMC\n",
+      "25  0.382619   FFMC    DMC\n",
+      "26  0.305128    ISI    DMC\n",
+      "27 -0.105342   wind    DMC\n",
+      "28  0.074790   rain    DMC\n",
+      "29 -0.048384      X    DMC\n",
+      "..       ...    ...    ...\n",
+      "70 -0.203466     DC   wind\n",
+      "71 -0.086368  month   wind\n",
+      "72 -0.105342    DMC   wind\n",
+      "73 -0.227116   temp   wind\n",
+      "74  0.069410     RH   wind\n",
+      "75 -0.028485   FFMC   wind\n",
+      "76  0.106826    ISI   wind\n",
+      "77  1.000000   wind   wind\n",
+      "78  0.061119   rain   wind\n",
+      "79  0.018798      X   wind\n",
+      "80  0.035861     DC   rain\n",
+      "81  0.013438  month   rain\n",
+      "82  0.074790    DMC   rain\n",
+      "83  0.069491   temp   rain\n",
+      "84  0.099751     RH   rain\n",
+      "85  0.056702   FFMC   rain\n",
+      "86  0.067668    ISI   rain\n",
+      "87  0.061119   wind   rain\n",
+      "88  1.000000   rain   rain\n",
+      "89  0.065387      X   rain\n",
+      "90 -0.085916     DC      X\n",
+      "91 -0.065003  month      X\n",
+      "92 -0.048384    DMC      X\n",
+      "93 -0.051258   temp      X\n",
+      "94  0.085223     RH      X\n",
+      "95 -0.021039   FFMC      X\n",
+      "96  0.006210    ISI      X\n",
+      "97  0.018798   wind      X\n",
+      "98  0.065387   rain      X\n",
+      "99  1.000000      X      X\n",
+      "\n",
+      "[100 rows x 3 columns]\n"
      ]
     }
    ],
@@ -130,7 +217,7 @@
     "for index in indices:\n",
     "    for column in columns:\n",
     "        cols.append(column)\n",
-    "        rows.append(index)\n",
+    "        rows.append(columns[index])\n",
     "        values.append(df.get_value(index=index,col=column))\n",
     "        \n",
     "new_df['value'] = pd.Series(values)\n",
@@ -142,8 +229,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "try:\n",
@@ -156,7 +245,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     ""
@@ -165,21 +256,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python3(tensorflow)",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2.0
+    "version": 3.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
